--- a/loves/xue/css/qrj.css
+++ b/loves/xue/css/qrj.css
@@ -30,7 +30,7 @@
 #valentine {
     display: none;
     z-index: 100;
-    width: 400px;
+    width: 100%;
     left: 0;
     left: 145px \9;
     _left: 145px
@@ -85,7 +85,7 @@
 #valentine .heart-wrap .heart {
     display: block;
     position: relative;
-    width: 235px;
+    width: 100%;
     height: 225px
 }
 
